maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:57: error: type mismatch;
 found   : (x: Double)Double <and> (x: Float)Float <and> (x: Long)Long <and> (x: Int)Int <and> (x: Char)Int <and> (x: Short)Int <and> (x: Byte)Int
 required: Int
		case 11 => ecrit(x + 1, y, i+1); ecrit(x, y-, i+1);
                                                           ^